<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="165dp"
        android:layout_height="158dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/untitled_3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/globalwidetech"
        android:textColorHint="@android:color/white"
        android:textSize="28sp" />


    <EditText
        android:id="@+id/idNomeUsuario"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/nome"
        android:backgroundTint="@color/cardview_light_background"
        android:textColor="@color/cardview_light_background"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/background_light"
        android:textSize="24sp" />

            <EditText
                android:id="@+id/idSenhaUsuario"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/cardview_light_background"
                android:textColor="@color/cardview_light_background"
                android:textColorHint="@color/cardview_light_background"
                android:layout_marginTop="15dp"
                android:textSize="24sp"
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="textPassword" />


    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/botao"
        android:hint="@string/confirmar"
        android:onClick="Conf"
        android:textAllCaps="false"
        android:textColorHint="@android:color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/FazerRegistro"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnCliqueAqui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/cliqueaqui"
            android:onClick="Cad"
            android:textColorHint="@android:color/holo_blue_bright"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>