<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/cadfundo"
    tools:context=".Cadastro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/cadastro"
                android:textColorHint="@color/cardview_light_background"
                android:gravity="center"
                android:textSize="44sp" />

            <EditText
                android:id="@+id/NomeCad"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="90dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/custom_input"
                android:textSize="22sp"
                android:hint="@string/nome"
                android:textColorHint="@color/cardview_dark_background"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/emailCad"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:textSize="22sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/cardview_dark_background"
                android:paddingLeft="12dp" />



            <EditText
                android:id="@+id/TelCad"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/custom_input"
                android:textSize="22sp"
                android:hint="@string/tel"
                android:textColorHint="@color/cardview_dark_background"
                android:inputType="number" />

            <EditText
                android:id="@+id/SenhaCad"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/custom_input"
                android:textSize="22sp"
                android:hint="@string/senha"
                android:textColorHint="@color/cardview_dark_background"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/ConfSenhaCad"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/custom_input"
                android:hint="@string/confSenha"
                android:textColorHint="@color/cardview_dark_background"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/btnconf"
                android:layout_marginTop="50dp"
                android:background="@drawable/degrade"
                android:layout_gravity="center"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:textColorHint="@android:color/white"
                android:hint="@string/confirmar"
                android:onClick="Conf"
                android:textSize="30sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>