<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="#010B47"
        android:hint="@string/Cliente"
        android:textColorHint="@color/design_default_color_background"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/editCodigo"
        android:layout_width="190px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:enabled="false"
        android:ems="10"
        android:hint="Código"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Nome Completo"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/editEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/end"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Telefone"
            android:inputType="number" />

        <EditText
            android:id="@+id/editCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/cpf"
            android:inputType="number" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLimpar"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botaocli"
            android:hint="@string/limpar"
            android:textColorHint="@color/design_default_color_background" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/botaocli"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textColorHint="@color/design_default_color_background"
            android:hint="@string/salvar" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/botaocli"
            android:hint="@string/excluir"
            android:textColorHint="@color/design_default_color_background"
            android:layout_weight="1" />

    </LinearLayout>


    <ListView
        android:id="@+id/ListViewClientes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>