<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".BuscaContrato">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/editBusca"
            android:layout_width="240dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/buscaNome"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnBusca"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:background="@drawable/botaocli"
            android:onClick="Buscar"
            android:textColorHint="@color/design_default_color_background"
            android:hint="@string/busca"
            tools:ignore="OnClick" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/no_data"
        android:textColor="@color/colorGWT"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listBusca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>