<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Sobre">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="75dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/azul" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:hint="@string/sobre"
        android:textColorHint="@color/colorGWT"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_marginTop="10dp"
        android:hint="@string/sobreDesc"
        android:layout_margin="20dp"
        android:textColorHint="@color/cardview_dark_background"
        android:gravity="center"
        android:textSize="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="verMapa"
            android:layout_marginRight="200dp"
            android:backgroundTint="#0B0B61"
            android:src="@android:drawable/ic_dialog_map" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="enviarEmail"
            android:layout_marginLeft="200dp"
            android:src="@android:drawable/ic_dialog_email"
            app:backgroundTint="#0B0B61" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="fazerChamada"
            android:src="@android:drawable/stat_sys_phone_call"
            app:backgroundTint="#0B0B61" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_marginTop="20dp"
        android:hint="@string/versao"
        android:layout_margin="30dp"
        android:textColorHint="@color/cardview_dark_background"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>